# owlery

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  dovecot.conf  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: docs.yml  release.yml  tests.yml
.github/workflows/scripts/: release.py
dev/: requirements.txt
docs/: api.rst  conf.py  getting-started.rst  index.rst  installation.rst  license.rst  requirements.txt  signals.rst  spelling-wordlist.txt
docs/integrations/: flask.rst  index.rst
docs/recipes/: celery.rst  index.rst  queue-manager.rst  rq.rst
docs/services/: index.rst
docs/services/email/: imap.rst  index.rst  pop3.rst  smtp.rst
owlery/: __init__.py  exceptions.py  signals.py  utils.py
owlery/examples/: celery.py  queue_manager.py  rq.py
owlery/integrations/: flask.py
owlery/services/: __init__.py  misc.py  twilio.py
owlery/services/email/: __init__.py  imap.py  pop3.py  smtp.py  utils.py
owlery/services/mms/: __init__.py  twilio.py
owlery/services/sms/: __init__.py  twilio.py
owlery/services/whatsapp/: __init__.py  twilio.py  wabp.py
tests/: conftest.py  docker-compose.yml  requirements.txt  test_signals.py
tests/integrations/: test_flask.py
tests/services/: test_manager.py  test_misc.py  test_service.py
tests/services/email/: conftest.py  test_imap.py  test_pop3.py  test_smtp.py
typing/: requirements.txt
